# brewgis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .sqlfluff  AGENTS.md  CONTRIBUTORS.txt  DESIGN.md  LICENSE  Makefile  README.md  _schema.yml  docker-compose.docs.yml  docker-compose.infra.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  eslint.config.js  manage.py  package-lock.json  package.json  postgis_3.3.2+dfsg-1+b1_amd64.deb  pyproject.toml  sacog_parcels_5k.geojson  test_parcels.geojson  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/skills/sqlmesh/: SKILL.md
.devcontainer/: devcontainer.json
.dlt/: config.toml
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml
.omp/: mcp.json
.omp/rules/: edit-anchors.md
brewgis/: conftest.py
brewgis/_ruff_rules/: __init__.py  check.py  rules.py
brewgis/contrib/footprint/: __init__.py  analysis_tool.py  application_initialization.py  category.py  dynamic_model_class_creator.py  group_hierarchy.py  signals.py  sort_type.py  tag.py
brewgis/dbt_project/: dbt_project.yml  packages.yml  profiles.yml
brewgis/dbt_project/macros/: allocation.sql  delta_columns.sql  generate_schema_name.sql  generic_tests.sql  geometry.sql  spatial_ops.sql  utility.sql
brewgis/dbt_project/models/: _schema.yml  acs_block_group.sql  agriculture.sql  allocation_apply.sql  allocation_factors.sql  base_canvas_attributes.sql  base_canvas_demographics.sql  base_canvas_employment.sql  base_canvas_geometry.sql  base_canvas_imputed.sql  base_canvas_reconciled.sql  building_water_ghg.sql  core_end_state.sql  core_increment.sql  displacement_risk.sql  displacement_risk_dynamic.sql  energy_demand.sql  env_constraint.sql  fiscal_net_impact.sql  fiscal_property_tax.sql  fiscal_sales_tax.sql  fiscal_service_costs.sql  food_access.sql  health_impacts.sql  housing_cost_burden.sql  impute_area_proportional.sql  internal_capture.sql  land_consumption.sql  mode_choice.py  physical_activity.sql  scenario_summary.sql  sources.yml  sprawl_cost.sql  sprawl_index.sql  stormwater_runoff.sql  total_ghg.sql  transport_ghg.sql  tree_canopy.sql  trip_distribution.py  trip_generation.sql  (+5 more)
brewgis/dbt_project/scripts/: bootstrap_test_tables.sql  run_test_dbt.sh
brewgis/dbt_project/seeds/: assessor_use_codes.csv  calibration_parameters.csv  sacog_land_use.csv  test_assessor_parcels.csv  test_assessor_parcels_extended.csv  test_assessor_sales.csv  test_base_canvas.csv  test_built_forms.csv  test_lodes_raw.csv  test_nlcd_parcels.csv  test_parcels.csv  test_sacog_parcels.csv  test_tiger_block_groups.csv  test_tiger_blocks.csv  test_wac_block.csv
brewgis/dbt_project/tests/: assert_aggregate_consistency.sql  assert_allocation_weights_non_negative.sql  (+22 more)
brewgis/dbtmachine/: apps.py  models.py  procedures.py
brewgis/gx/: __init__.py  custom_expectations.py  datasource.py  gx.yml
brewgis/soda/: __init__.py  configuration.yml  seed.py
brewgis/sqlmesh/: config.py  utils.py
brewgis/templates/: base.html  form.html  workspace_map.html
brewgis/users/: adapters.py  apps.py  models.py  views.py
brewgis/workspace/: admin.py  apps.py  models.py  palettes.py  sql_tools.py  tasks.py  urls.py  viewsets.py
config/: celery_app.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
dbt/: dbt_project.yml
dbt/profiles/: .user.yml  profiles.yml
docs/: BASE_MAP_METHODOLOGY.md  COLUMN_NAMING.md  built_forms.md  conf.py  data_tooling.md  design-review-checklist.md  howto.rst  index.rst  jupysql.md  make.bat  mcp.md  sqlmesh-parameters.md  users.rst
js/src/: index.ts
requirements/: base.txt  local.txt  production.txt
scripts/: check-method-decorator.py  fix-perms.sh  restore-demo-db.sh  setup-fresno-demo.sh
tests/: analysis_template_test.py  conftest.py  factories.py  test_agriculture.py  test_analysis_isolation.py  test_analysis_run.py  test_architecture.py  test_building_water_ghg.py  test_core_module_integration.py  test_dbt_runner.py  test_distance_matrix.py  test_energy_demand.py  test_env_constraint_integration.py  test_fiscal.py  test_health_impacts.py  test_internal_capture.py  test_land_consumption.py  test_layer_registry.py  test_merge_module.py  test_merge_production_dotenvs_in_dotenv.py  test_mode_choice.py  test_network_extractor.py  test_physical_activity.py  test_stormwater_runoff.py  test_transport_ghg.py  test_trip_distribution.py  test_trip_generation.py  test_vmt.py  test_water_demand.py
tests/dbt_math/: __init__.py  dbt_model_runner.py  reference.py  sqlmesh_model_runner.py  strategies.py  test_reference_contracts.py  test_sql_parity.py
tests/e2e/: __init__.py  conftest.py
tests/features/: conftest.py  dbt_isolation.feature
tests/gx/: test_base_canvas_suite.py  test_built_form_suite.py  test_census_suite.py  test_column_stitching_suite.py  test_datasource.py  test_management_command.py  test_spatial_allocation_suite.py  test_synthetic_parcels_suite.py
tests/isolation_orchestration/: conftest.py
tests/review/: conftest.py
tests/soda/: test_contracts.py  test_management_command.py
tests/workspace/: test_allocation.py  test_analysis_views.py  test_assessor_fetcher.py  test_auto.py  test_built_forms_models.py  test_built_forms_views.py  test_canvas_view_manager.py  test_census_adapter.py  test_check_provenance.py  test_chip_extractor.py  test_classifiers.py  test_column_inspector.py  test_column_mapping.py  test_compare_sacog_report.py  test_dagster_assets.py  test_dagster_client.py  test_data_catalog.py  test_data_export.py  test_dbt_schema.py  test_deal_contracts.py  test_equity_preprocessor.py  test_etl_pipeline.py  test_explain_sqlmesh.py  test_export_story_packet.py  test_fetchers.py  test_filter_compiler.py  test_filter_models.py  test_filter_views.py  test_generator.py  test_gis_upload.py  test_import_views.py  test_imputation_engine.py  test_layer_delete.py  test_legend.py  test_legend_views.py  test_lehd_adapter.py  test_linter_rules.py  test_mcp_server.py  test_mcp_sqlmesh.py  test_module_registry.py  (+31 more)
(+857 files in other folders)
