[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "brewgis"
version = "0.1.0"
description = "GIS Workspace for Urban Planners and Data Scientists"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Brew GIS Contributors" },
]
dependencies = [
    # Django
    "django>=6.0,<6.1",
    "django-environ==0.11.2",
    "django-model-utils==5.0.0",
    "django-allauth[mfa]==65.16.0",
    "django-crispy-forms==2.6",
    "crispy-bootstrap5==2026.3",
    "django-redis==6.0.0",
    "django-ninja==1.6.2",
    "django-htmx==1.27.0",
    # Auth & security
    "argon2-cffi==23.1.0",
    # Async / task queue
    "celery>=5.4.0,<6.0",
    "django-celery-beat==2.9.0",
    "flower==2.0.1",
    "redis==5.2.0",
    "hiredis==3.0.0",
    # GIS & data
    "geopandas[all]==1.0.1",
    "pandas==2.2.3",
    "polars[pyarrow]>=1.0,<2.0",
    "GeoAlchemy2==0.16.0",
    "numpy>=2.0,<3.0",
    "Pillow==11.0.0",
    "osmnx>=2.0,<3.0",
    "statsmodels>=0.14,<1.0",
    "shapely>=2.0,<3.0",
    # dbt
    "dbt-core>=1.8,<2.0",
    "dbt-postgres>=1.8,<2.0",
    # Database
    "psycopg2-binary==2.9.10",
    # Web / utilities
    "python-slugify==8.0.4",
    "whitenoise==6.8.2",
    "pydantic==2.10.3",
    "mcp>=1.0.0",
    # PDF reports
    "weasyprint>=62,<64",
]

[project.optional-dependencies]
prod = [
    "gunicorn==23.0.0",
    "psycopg[binary]==3.2.3",
    "django-anymail==15.0",
]

[dependency-groups]
dev = [
    # Server & debugging
    "Werkzeug[watchdog]==3.1.3",
    "ipdb==0.13.13",
    "psycopg[binary]==3.2.3",
    "watchfiles==1.0.0",
    "gunicorn==23.0.0",
    "django-anymail==15.0",
    "django-debug-toolbar==6.2.0",
    # Testing
    "pytest==8.3.3",
    "pytest-sugar==1.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-django==4.9.0",
    "pytest-bdd==8.1.0",
    "pytest-playwright==0.7.0",
    "playwright==1.52.0",
    "factory-boy==3.3.1",
    "hypothesis>=6.100",
    "deal>=4.24",
    "django-coverage-plugin==3.1.0",
    "coverage==7.6.8",
    # Typing
    "mypy==1.13.0",
    "django-stubs[compatible-mypy]==6.0.3",
    "pandas-stubs==2.2.3.241009",
    # Linting & formatting
    "ruff>=0.11.0",
    "djlint==1.36.1",
    "pre-commit==4.0.1",
    "sqlfluff>=3.3.0",
    "sqlfluff-templater-dbt>=3.3.0",
    # Documentation
    "sphinx==8.1.3",
    "sphinx-autobuild==2024.10.3",
    # Interactive analysis
    "jupysql>=0.10,<1.0",
]

[tool.setuptools.packages.find]
include = ["brewgis", "brewgis.*", "config", "config.*"]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
    "*_steps.py",
]
norecursedirs = "planning"
markers = [
    "e2e: mark test as end-to-end test requiring Playwright browser",
    "slow: mark test as slow (property-based, hypothesis-generated)",
    "models: database model tests",
    "views: view/HTTP tests",
    "integration: tests requiring full Docker stack (PostGIS, dbt, or external services)",
    "timeout: mark test with per-test timeout for pytest-timeout",
    "review: UX design review tests (macro-level UX validation, not pixel/CSS checks)",
]
timeout = 300
timeout_func_only = true

# ==== Coverage ====
[tool.coverage.run]
include = ["brewgis/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
# Packages without stubs:
module = [
    "celery",
    "environ",
    "geopandas",
    "pandas",
    "shapely",
    "shapely.*",
    "werkzeug.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Existing untyped code — gradually remove overrides as functions are typed
module = [
    "brewgis.workspace.views",
    "brewgis.workspace.models",
    "brewgis.conftest",
    "config.celery_app",
    "config.wsgi",
    "config.urls",
]
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
target-version = "py312"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pycodestyle]
max-line-length = 119
max-doc-length = 119
[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ANN", # flake8-annotations
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  "FURB",
  "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "ANN401", # Dynamically typed expressions are acceptable for pytest fixtures and gradual typing
  "COM812", # Trailing comma — handled by ruff formatter
]

[tool.ruff.lint.per-file-ignores]
# cookiecutter-generated files — keep blanket noqa
"config/urls.py" = ["PGH004"]
"config/wsgi.py" = ["PGH004"]
"docs/conf.py" = ["PGH004"]
"manage.py" = ["PGH004"]
"merge_production_dotenvs_in_dotenv.py" = ["PGH004"]
# Standard pytest fixture patterns
"brewgis/conftest.py" = ["ANN001", "ARG001"]

"tests/**/*.py" = ["PLR2004", "ANN001", "ARG001"]
[tool.ruff.lint.isort]
force-single-line = true
